@@ -27,11 +27,11 @@ import com.redhat.rhn.domain.channel.test.ChannelFamilyTest;
 import com.redhat.rhn.domain.common.ManagerInfoFactory;
 import com.redhat.rhn.domain.credentials.CredentialsFactory;
 import com.redhat.rhn.domain.credentials.SCCCredentials;
+import com.redhat.rhn.domain.product.ChannelTemplate;
 import com.redhat.rhn.domain.product.ReleaseStage;
 import com.redhat.rhn.domain.product.SUSEProduct;
 import com.redhat.rhn.domain.product.SUSEProductChannel;
 import com.redhat.rhn.domain.product.SUSEProductFactory;
-import com.redhat.rhn.domain.product.SUSEProductSCCRepository;
 import com.redhat.rhn.domain.rhnpackage.PackageFactory;
 import com.redhat.rhn.domain.scc.SCCRepository;
 import com.redhat.rhn.domain.scc.SCCRepositoryAuth;
@@ -71,7 +71,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Utility methods for creating SUSE related test data.
@@ -150,7 +149,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
     }
 
     /**
-     * Create SUSEProductSCCRepository for the product
+     * Create ChannelTemplate for the product
      * @param baseProduct Base product
      * @param baseChannel base channe
      * @param product product
@@ -163,7 +162,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
         SCCRepository repository = SUSEProductTestUtils.createSCCRepository();
         SUSEProductTestUtils.createSCCRepositoryTokenAuth(sccc, repository);
 
-        SUSEProductSCCRepository ltssSP1ProdRepo = new SUSEProductSCCRepository();
+        ChannelTemplate ltssSP1ProdRepo = new ChannelTemplate();
         ltssSP1ProdRepo.setRepository(repository);
         ltssSP1ProdRepo.setRootProduct(baseProduct);
         ltssSP1ProdRepo.setProduct(product);
@@ -565,7 +564,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
                     inputStreamReader7, new TypeToken<List<SCCProductJson>>() { }.getType());
             products.addAll(addProducts);
             addRepos.addAll(ContentSyncManager.collectRepos(
-                    ContentSyncManager.flattenProducts(addProducts).collect(Collectors.toList())));
+                    ContentSyncManager.flattenProducts(addProducts).toList()));
         }
         repositories.addAll(addRepos);
 
@@ -610,9 +609,9 @@ public class SUSEProductTestUtils extends HibernateFactory {
 
     public static void addChannelsForProduct(SUSEProduct product) {
         ContentSyncManager csm = new ContentSyncManager();
-        product.getRepositories()
+        product.getChannelTemplates()
         .stream()
-        .filter(SUSEProductSCCRepository::isMandatory)
+        .filter(ChannelTemplate::isMandatory)
         .forEach(pr -> {
             try {
                 if (pr.getParentChannelLabel() != null &&
@@ -638,7 +637,7 @@ public class SUSEProductTestUtils extends HibernateFactory {
     public static void addChannelsForProductAndParent(SUSEProduct product, SUSEProduct root,
             boolean mandatory, List<Long> optionalChannelIds) {
         ContentSyncManager csm = new ContentSyncManager();
-        product.getRepositories()
+        product.getChannelTemplates()
         .stream()
         .filter(pr -> pr.getRootProduct().equals(root))
         .filter(pr -> (mandatory && pr.isMandatory()) || optionalChannelIds.contains(pr.getRepository().getSccId()))
