@@ -55,8 +55,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -232,7 +230,7 @@ public class BaseSubscribeAction extends RhnLookupDispatchAction {
                             "basesub.jsp.unableToLookupSystemDefaultChannelWithParams",
                             String.join(", ", skippedServers.stream()
                                     .map(s -> "'" + s.getName() + "'")
-                                    .collect(Collectors.toList())), oldBaseChannelMessage);
+                                    .toList()), oldBaseChannelMessage);
                     msgs.add(ActionMessages.GLOBAL_MESSAGE, actionMessage);
                     strutsDelegate.saveMessages(request, msgs);
 
@@ -465,7 +463,7 @@ public class BaseSubscribeAction extends RhnLookupDispatchAction {
             //  change the systems base channel
             Channel c = ChannelFactory.lookupById(spc.getId());
 
-            Set<EssentialChannelDto> compatibles = ChannelManager.listCompatibleBaseChannelsForChannel(user, c);
+            List<EssentialChannelDto> compatibles = ChannelManager.listCompatibleBaseChannelsForChannel(user, c);
             log.debug("Sorting channels: {}", compatibles.size());
             List<EssentialChannelDto> rhn = new ArrayList<>();
             List<EssentialChannelDto> custom = new ArrayList<>();
