@@ -47,7 +47,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * @apidoc.namespace actionchain
@@ -330,7 +329,7 @@ public class ActionChainHandler extends BaseHandler {
         List<Long> actionIds = null;
         try {
             List<Server> serverIds = sids.stream().map(sid ->
-                    this.acUtil.getServerById(sid, loggedInUser)).collect(Collectors.toList());
+                    this.acUtil.getServerById(sid, loggedInUser)).toList();
 
             actionIds = ActionChainManager.scheduleErrataUpdate(loggedInUser,
                     serverIds,
@@ -655,7 +654,7 @@ public class ActionChainHandler extends BaseHandler {
                             (String) specifier.get("channelLabel"),
                             (String) specifier.get("filePath"),
                             (Integer) specifier.get("revision")).getId()
-        ).collect(Collectors.toList());
+        ).toList();
 
         try {
             ActionChainManager.createConfigActions(loggedInUser, revisionIds, server,
