@@ -124,6 +124,7 @@ import com.redhat.rhn.taskomatic.task.systems.SystemsOverviewUpdateWorker;
 import com.suse.manager.model.maintenance.MaintenanceSchedule;
 import com.suse.manager.reactor.messaging.ApplyStatesEventMessage;
 import com.suse.manager.reactor.messaging.ChannelsChangedEventMessage;
+import com.suse.manager.reactor.messaging.ChannelsChangedEventMessageAction;
 import com.suse.manager.reactor.utils.ValueMap;
 import com.suse.manager.ssl.SSLCertData;
 import com.suse.manager.ssl.SSLCertGenerationException;
@@ -227,7 +228,7 @@ public class SystemManager extends BaseManager {
         List<SystemIDInfo> systemIDInfos =
                 this.serverFactory.lookupSystemsVisibleToUserWithEntitlement(user, entitlement);
 
-        List<Long> systemIDs = systemIDInfos.stream().map(SystemIDInfo::getSystemID).collect(Collectors.toList());
+        List<Long> systemIDs = systemIDInfos.stream().map(SystemIDInfo::getSystemID).toList();
 
         Map<Long, List<SystemGroupID>> managedGroupsPerServer =
                 this.serverGroupFactory.lookupManagedSystemGroupsForSystems(systemIDs);
@@ -235,7 +236,7 @@ public class SystemManager extends BaseManager {
         return systemIDInfos.stream()
                 .map(s -> new SystemGroupsDTO(s.getSystemID(),
                         managedGroupsPerServer.getOrDefault(s.getSystemID(), new ArrayList<>())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -247,7 +248,7 @@ public class SystemManager extends BaseManager {
         if (!Config.get().getBoolean(ConfigDefaults.TAKE_SNAPSHOTS)) {
             return;
         }
-        List<Long> serverIds = servers.stream().map(Server::getId).collect(Collectors.toList());
+        List<Long> serverIds = servers.stream().map(Server::getId).toList();
         List<Long> snapshottableServerIds = filterServerIdsWithFeature(serverIds, "ftr_snapshotting");
 
         // If the server is null or doesn't have the snapshotting feature, don't bother.
@@ -504,11 +505,11 @@ public class SystemManager extends BaseManager {
         Set<String> hwAddrs = hwAddress.map(Collections::singleton).orElse(emptySet());
         List<MinionServer> matchingProfiles = findMatchingEmptyProfiles(hostname, hwAddrs);
         if (!matchingProfiles.isEmpty()) {
-            throw new SystemsExistException(matchingProfiles.stream().map(Server::getId).collect(Collectors.toList()));
+            throw new SystemsExistException(matchingProfiles.stream().map(Server::getId).toList());
         }
 
         String uniqueId = SystemManagerUtils.createUniqueId(
-                Arrays.asList(hwAddress, hostname).stream().flatMap(Opt::stream).collect(Collectors.toList()));
+                Arrays.asList(hwAddress, hostname).stream().flatMap(Opt::stream).toList());
 
         MinionServer server = new MinionServer();
         server.setName(systemName);
@@ -1704,7 +1705,7 @@ public class SystemManager extends BaseManager {
         params.put("feature", feat);
 
         DataResult<Map<String, Long>> result = m.execute(params, sids);
-        return result.stream().map(Map::values).flatMap(Collection::stream).collect(Collectors.toList());
+        return result.stream().map(Map::values).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -2921,7 +2922,7 @@ public class SystemManager extends BaseManager {
         SelectMode mode = ModeFactory.getMode("System_queries", "system_ids");
         Map<String, Object> params = new HashMap<>();
         DataResult<Map<String, Object>> dr = mode.execute(params);
-        return dr.stream().map(data -> (Long)data.get("id")).collect(Collectors.toList());
+        return dr.stream().map(data -> (Long)data.get("id")).toList();
     }
 
     /**
@@ -3626,8 +3627,17 @@ public class SystemManager extends BaseManager {
     }
 
     /**
-     * Update the the base and child channels of a server. Calls
+     * Update the base and child channels of a server. Calls
      * the {@link UpdateBaseChannelCommand} and {@link UpdateChildChannelsCommand}.
+     * This method regenerate the Tokens and Pillar Data synchronous, but does not
+     * trigger a 'state.apply' for channels.
+     * <br/>
+     * To unsubscribe from all channels, set baseChannel to empty and provide an empty list of child channels
+     * To switch the base channel and let it find compatible child channels to the currently subscribed child channels,
+     * just provide the new base channel and provide an empty list for the child channels
+     * If no base channel is provided, the list of child channels should have the currently assigned base channel as
+     * parent.
+     * If both, base and child channels are provided, the system will be changed to use the defined channels
      *
      * @param user the user changing the channels
      * @param server the server for which to change channels
@@ -3635,36 +3645,39 @@ public class SystemManager extends BaseManager {
      * @param childChannels the full list of child channels to set. Any channel no provided will be unsubscribed.
      * and will be used when regenerating the Pillar data for Salt minions.
      */
-    public static void updateServerChannels(User user,
+    public void updateServerChannels(User user,
                                             Server server,
                                             Optional<Channel> baseChannel,
                                             Collection<Channel> childChannels) {
-        long baseChannelId =
-                baseChannel.map(Channel::getId).orElse(-1L);
 
-        // if there's no base channel present the there are no child channels to set
-        List<Long> childChannelIds = baseChannel.isPresent() ?
-                childChannels.stream().map(Channel::getId).collect(Collectors.toList()) :
-                emptyList();
+        long baseChannelId = baseChannel.map(Channel::getId).orElse(-1L);
+        List<Long> childChannelIds = childChannels.stream().map(Channel::getId).collect(Collectors.toList());
 
-        UpdateBaseChannelCommand baseChannelCommand =
-                new UpdateBaseChannelCommand(
-                        user,
-                        server,
-                        baseChannelId);
+        if (baseChannel.isPresent() || childChannels.isEmpty()) {
+            UpdateBaseChannelCommand baseChannelCommand = new UpdateBaseChannelCommand(
+                    user,
+                    server,
+                    baseChannelId);
 
-        UpdateChildChannelsCommand childChannelsCommand =
-                new UpdateChildChannelsCommand(
-                        user,
-                        server,
-                        childChannelIds);
+            baseChannelCommand.skipChannelChangedEvent(true);
+            baseChannelCommand.store();
+        }
 
-        baseChannelCommand.skipChannelChangedEvent(true);
-        baseChannelCommand.store();
-        childChannelsCommand.skipChannelChangedEvent(true);
-        childChannelsCommand.store();
+        if (!childChannels.isEmpty()) {
+            UpdateChildChannelsCommand childChannelsCommand = new UpdateChildChannelsCommand(
+                    user,
+                    server,
+                    childChannelIds);
 
-        MessageQueue.publish(new ChannelsChangedEventMessage(server.getId(), user.getId()));
+            childChannelsCommand.skipChannelChangedEvent(true);
+            childChannelsCommand.store();
+        }
+
+        // Calling this asynchronous block execution util main thread close the Hibernate Session
+        // as we require the result, we must call this synchronous
+        ChannelsChangedEventMessageAction channelsChangeAction =
+                new ChannelsChangedEventMessageAction(saltApi);
+        channelsChangeAction.execute(new ChannelsChangedEventMessage(server.getId(), user.getId()));
 
     }
 
